actualizacion de color

--- a/styleSurprise.css
+++ b/styleSurprise.css
@@ -65,7 +65,7 @@ body {
   left: 0;
   display: block;
   font-size: 20em;
-  color: #FF2C2C;
+  color: #f53c3c;
   content: "\f004";
   font-family: FontAwesome;
   text-rendering: auto;
