--- a/styleSurprise.css
+++ b/styleSurprise.css
@@ -65,7 +65,7 @@ body {
   left: 0;
   display: block;
   font-size: 20em;
-  color: #f53c3c;
+  color: #fb3f3f;
   content: "\f004";
   font-family: FontAwesome;
   text-rendering: auto;
